@@ -32,9 +32,6 @@ Before 1.0 little stuff
  o Alpha ev67 events are broken
  o odb_insert() can fail on ftruncate or mremap() in db_manage.c but we don't
   try to recover gracefully.
- o we allow op_help --cpu-type=xx but with 16 it segfault on x86, alpha ev67
-  need OP_MAX_COUNTERS > 8 but we compile all tools with OP_MAX_COUNTERS==8
-  (see libop/op_hw_config.h). We should remove this #define
  o we can add lots more unit tests yet
  o output column shortname headers for opreport -l
  o separate debug info stuff
